k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nisit-deeden-laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nisit-deeden-laravel
  template:
    metadata:
      labels:
        app: nisit-deeden-laravel
    spec:
      containers:
        - name: app
          image: ${DOCKER_USERNAME}/nisit-deeden-laravel:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
