k8s/uat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nisit-deeden-laravel-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nisit-deeden-laravel-uat
  template:
    metadata:
      labels:
        app: nisit-deeden-laravel-uat
    spec:
      containers:
        - name: app
          image: ${DOCKER_USERNAME}/nisit-deeden-laravel-uat:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
