k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nisit-deeden-backend
spec:
  type: NodePort
  selector:
    app: nisit-deeden-laravel
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
