k8s/uat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nisit-deeden-backend-uat
spec:
  type: ClusterIP
  selector:
    app: nisit-deeden-laravel-uat
  ports:
    - port: 80
      targetPort: 80
