k8s/production-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nisit-deeden-combined-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  rules:
    - host: admin.nisit-deeden.k8s.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nisit-deeden-backend
                port:
                  number: 80

    - host: user.nisit-deeden.k8s.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nisit-deeden-frontend
                port:
                  number: 80
